--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ transform: rotate(-28deg);
 
 #circle-3 {
     right: 175px;
-    top: 185px;
+    top: 180px;
 }
 
 #circle-4 {
@@ -553,59 +553,99 @@ transform: rotate(-28deg);
 }
 
 #circle-5 {
-    left: 218px;
-    top: 1105px;
+    left: 225px;
+    top: 1090px;
 }
 
 #circle-6 {
-    left: 186px;
-    top: 1140px;
+    left: 200px;
+    top: 1120px;
 }
 
 #circle-7 {
-    right: 165px;
-    top: 1819px;
+    right: 195px;
+    top: 1820px;
 }
 
 #circle-8 {
-    right: 207px;
-    top: 1854px;
+    right: 220px;
+    top: 1850px;
 }
 
 #circle-9 {
-    right: 239px;
-    top: 1899px;
+    right: 245px;
+    top: 1880px;
 }
 
 #circle-10 {
     left: 235px;
-    top: 2245px;
+    top: 2500px;
 }
 
 #circle-11 {
-    left: 203px;
-    top: 2280px;
+    left: 210px;
+    top: 2530px;
 }
 
 #circle-12 {
-    left: 171px;
-    top: 2315px;
+    left: 185px;
+    top: 2560px;
 }
 #circle-13 {
     left:235px;
-    top: 3150px;
+    top: 3425px;
 }
 
 #circle-14 {
-    left: 203px;
-    top: 3185px;
+    left: 210px;
+    top: 3450px;
 }
 
 #circle-15 {
-    left: 171px;
-    top: 3220px;
+    left: 180px;
+    top: 3475px;
+}
+#circle-16 {
+    border: 1px solid #ffffff;
+    left:70px;
+    top: 5360px;
+    z-index: 1;
 }
 
+#circle-17 {
+    border-color: #ffffff;
+    left: 40px;
+    top: 5400px;
+    z-index: 1;
+}
+
+#circle-18 {
+    border-color: #ffffff;
+    left: 10px;
+    top: 5430px;
+    z-index: 1;
+}
+
+#circle-19 {
+    border: 1px solid #ffffff;
+    right:10px;
+    top: 4700px;
+    z-index: -2;
+}
+
+#circle-20 {
+    border-color: #ffffff;
+    right: 35px;
+    top: 4730px;
+    z-index: -2;
+}
+
+#circle-21 {
+    border-color: #ffffff;
+    right: 60px;
+    top: 4760px;
+    z-index: -2;
+}
 .ellipse {
     position: absolute;
     width: 292.96px;
@@ -659,45 +699,48 @@ transform: rotate(-28deg);
 
 
 #ellipse-7{
-    left: 1305px;
-    top: 1224px;
+    right: -100px;
+    top: 1200px;
     background-color: #FF5555;
     z-index: -2;
 }
 
 #ellipse-8{
-    left: 1271px;
-    top: 1303px;
+    right: -100px;
+    top: 1300px;
     z-index:-3;
     background: #FDE598;
 }
 
 #ellipse-9{
-    right: 320px;
-    top: 1985px;
+    right: 350px;
+    top: 2050px;
     background-color: #FF5555;
     z-index: -2;
+    transform: rotate(40deg);
  }  
 
 #ellipse-10{
-    right:320px;
-    top:2070px;
+    right:375px;
+    top:2150px;
     background-color: #FDE598;
     z-index: -3;
+    transform: rotate(40deg);
 
 }
 
 #ellipse-11{
-    left: 325px;
-    top:2480px;
+    left: 350px;
+    top:2700px;
     background-color: #FDE598;
     z-index: -3;
     transform: rotate(40deg);
+ 
  }  
 
 #ellipse-12{
-    left:290px;
-    top:2600px;
+    left:300px;
+    top:2800px;
     background-color: #ff5555;
     z-index: -2;
     transform: rotate(40deg);
@@ -705,19 +748,52 @@ transform: rotate(-28deg);
 }
 
 #ellipse-13{
-    left: 210px;
-    top:3375px;
+    left: 170px;
+    top:3625px;
     z-index: -2;
     background-color: #ff5555;
  }  
 
 #ellipse-14{
-    left:180px;
-    top:3450px;
+    left:170px;
+    top:3700px;
     background-color: #FDE598;
     z-index: -3;
 }
 
+#ellipse-15{
+    left:25px;
+    top:4875px;
+    background-color: #FF5555;
+    z-index:-2;
+}
+
+#ellipse-16{
+    left:25px;
+    top:4975px;
+    background-color: #FDE598;
+    z-index: -3;
+}
+
+#ellipse-17{
+   right:100px;
+   top:5250px;
+   background-color: #FDE598;
+   z-index:-2;
+   transform: rotate(40deg);
+}
+
+#ellipse-18{
+    right:200px;
+    top:5350px;
+    z-index: -1;
+    background-color: #ff5555;
+    transform: rotate(40deg);
+}
+
+#ellipse-18{
+
+}
 
 #stars {
     position: absolute;
@@ -807,6 +883,7 @@ transform: rotate(-28deg);
     height: 64px;
     left: 1323px;
     top: 4690px;
+    z-index: 1;
 
 }
 
@@ -816,17 +893,46 @@ transform: rotate(-28deg);
     left: 82px;
     top: 4901px;
     transform: rotate(-45deg);
+    z-index:1;
 }
 
 
-#stars:nth-of-type(13){
-    width:42px;
-    height: 42px;
-    left:533px;
-    top:775px;
+#stars:nth-of-type(13) {
+    content: url('./images/star1.png');
+    width:64px;
+    height: 64px;
+    left: 850px;
+    top: 5025px;
+    z-index: 1;
+
+}
+
+#stars:nth-of-type(14) {
+    content: url('./images/star1.png');
+    width:48px;
+    height: 48px;
+    left: 560px;
+    top: 5420px;
+    transform: rotate(-45deg);
+    z-index:1;
+}
+
+#move-frame{
+    margin-right:125px;
+    margin-top:25px;
     z-index:2;
+    width:591px;
+    height: 560px;
+
 }
 
+.row-gap-20{
+    gap:20px;
+}
+
+.row-gap-65{
+    gap:65px;
+}
 
 @media (max-width:992px){
     .circle{
@@ -1033,6 +1139,7 @@ transform: rotate(-28deg);
     }
     #page-gap {
         gap: 350px;
+
     }
     
     .row-gap-12 {
@@ -1108,228 +1215,10 @@ transform: rotate(-28deg);
         top: 4100px;
         left: 283px;
     }
-    
-    #stars {
-        position: absolute;
-        content: url('./images/star.png');
+    .circle,.ellipse,#stars{
+        display: none;
     }
-    
-    #stars:nth-of-type(1) {
-        right: 48px;
-        top: 100px;
-    }
-    
-    #stars:nth-of-type(2) {
-        left: 38px;
-        top: 98px;
-    }
-    
-    #stars:nth-of-type(3) {
-        left: 152px;
-        top: 525px;
-    }
-    
-    #stars:nth-of-type(4) {
-        right: 37px;
-        top: 583px;
-    }
-    
-    #stars:nth-of-type(5) {
-        left: 200px;
-        top: 1150px;
-    }
-    
-    #stars:nth-of-type(7) {
-        left: 364px;
-        top: 2800px;
-    }
-    
-    #stars:nth-of-type(8) {
-        right: 124px;
-        top: 4862px;
-    }
-    
-    #stars:nth-of-type(9) {
-        left: 82px;
-        top: 3703px;
-        transform: rotate(-45deg);
-    }
-    
-    #stars:nth-of-type(10) {
-        left: 779px;
-        top: 3941px;
-    
-    }
-    
-    #stars:nth-of-type(11) {
-        left: 1323px;
-        top: 4690px;
-    }
-    
-    #stars:nth-of-type(12) {
-        left: 82px;
-        top: 4901px;
-    }
-    
-    .circle {
-        width: 383.17px;
-        height: 551.56px;
-        border-radius: 50%;
-    }
-    
-    #circle-1 {
-        right: 131px;
-        top: 120px;
-    }
-    
-    #circle-2 {
-        right: 165px;
-        top: 150px;
-    
-    }
-    
-    #circle-3 {
-        right: 195px;
-        top: 185px;
-    }
-    
-    #circle-4 {
-        left: 250px;
-        top: 910px;
-    }
-    
-    #circle-5 {
-        left: 218px;
-        top: 945px;
-    }
-    
-    #circle-6 {
-        left: 186px;
-        top: 980px;
-    }
-    
-    #circle-7 {
-        right: 155px;
-        top: 1649px;
-    }
-    
-    #circle-8 {
-        right: 187px;
-        top: 1684px;
-    }
-    
-    #circle-9 {
-        right: 219px;
-        top: 1719px;
-    }
-    
-    #circle-10 {
-        left: 235px;
-        top: 2245px;
-    }
-    
-    #circle-11 {
-        left: 203px;
-        top: 2280px;
-    }
-    
-    #circle-12 {
-        left: 171px;
-        top: 2315px;
-    }
-    #circle-13 {
-        left:235px;
-        top: 3150px;
-    }
-    
-    #circle-14 {
-        left: 203px;
-        top: 3185px;
-    }
-    
-    #circle-15 {
-        left: 171px;
-        top: 3220px;
-    }
-    
-    .ellipse {
-        width: 156px;
-        height: 78px;
-    }
-    
-    #ellipse-1{
-        left:30px;
-        top:100px;
-    }
-    
-    #ellipse-2{
-        left:341px;
-        top:229px;
-    }
-    
-    
-    #ellipse-3{
-        right:239px;
-        top:190px;
-    }
-    
-    #ellipse-4{
-        right:245px;
-        top:595px;
-    }
-    
-    #ellipse-5{
-        left: 145px; 
-        top:905px;
-    }
-    #ellipse-6{
-        left:185px; 
-        top:1000px;
-    }
-    
-    
-    #ellipse-7{
-        left: 1305px;
-        top: 1124px;
-    }
-    
-    #ellipse-8{
-        left: 1271px;
-        top: 1203px;
-     }
-    
-    #ellipse-9{
-        right: 320px;
-        top: 1985px;
-     }  
-    
-    #ellipse-10{
-        right:320px;
-        top:2070px;
-    }
-    
-    #ellipse-11{
-        left: 325px;
-        top:2480px;
-     }  
-    
-    #ellipse-12{
-        left:290px;
-        top:2600px;
-    }
-    
-    #ellipse-13{
-        left: 210px;
-        top:3375px;
-     }  
-    
-    #ellipse-14{
-        left:180px;
-        top:3450px;
-    }
-    
-    
-
+ 
 }
 
 
